Add Terraform configuration for AWS infrastructure including VPC, EC2, IAM roles, S3 bucket, security group, and outputs

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,15 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Infrastructure
+*.tfstate
+*.tfstate.*
+*.tfvars
+.terraform/
+.terraform-version
+.terraform.lock.hcl
+.terraform.tfstate
+.terraform.tfstate.backup
+.terraform.tfstate.*
+.terraform.tfstate.backup.*
